updated contact component form

--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "url": ""
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/Forwardslash-development/forwardslash-development-app/issues"
   }
 }
